[gd_scene load_steps=3 format=3 uid="uid://dieewwsv8s7rc"]

[ext_resource type="Script" path="res://Scripts/dropper.gd" id="1_ltmhy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lv0w3"]
size = Vector2(65, 82)

[node name="Dropper" type="Node2D"]
script = ExtResource("1_ltmhy")

[node name="Area2D" type="Area2D" parent="." groups=["container"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_lv0w3")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 33.0
offset_top = -37.0
offset_right = 73.0
offset_bottom = -14.0

[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_area_2d_area_shape_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
